add privacy policy

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -8,8 +8,8 @@
 	},
 	"sessionSecret": "cqDrWYYnjbkhGxTzDE3CBKu9s9UvuQEmy9pTny",
 	"facebook": {
-		"clientID": "<AppID>",
-		"clientSecret": "<AppSecret>",
+		"clientID": "2203639449881047",
+		"clientSecret": "0e3742ed50577b41406b8acf45694b6d",
 		"callbackURL": "/auth/facebook/callback",
 		"profileFields": ["id", "displayName", "photos"]
 	},
